--- a/webapp/src/widgets/menu/menu.scss
+++ b/webapp/src/widgets/menu/menu.scss
@@ -218,6 +218,11 @@
                     margin-right: 12px;
                 }
 
+                .menu-option__content {
+                    font-size: 16px;
+                    justify-content: center;
+                }
+
                 > .menu-name {
                     font-size: 16px;
                     justify-content: center;
